After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788820 - Fix shell panel scaling when multi-dpi
Fix shell panel scaling when multi-dpi
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
: 788040 789072 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2017-10-11 10:09 UTC by Jonas Ådahl
Modified: 2017-11-06 15:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
settings: Get UI scaling factor from primary logical monitor (1.65 KB, patch)
2017-10-11 10:09 UTC, Jonas Ådahl
committed Details | Review
DisplayConfig: Add 'legacy-ui-scaling-factor' property (2.62 KB, patch)
2017-10-11 10:09 UTC, Jonas Ådahl
committed Details | Review

Description Jonas Ådahl 2017-10-11 10:09:40 UTC
The UI scaling factor was calculated to be the highest scale of any connected
monitor. This doesn't make much sense since the UI scaling factor is primarily
used to determine the scaling factor of the shell UI which is mostly on the
primary monitor.

Thus change the semantics to just get the scale from the logical monitor.

The second patch also adds the calculated number to
DisplayConfig.GetCurrentState D-Bus method. This way we can, in GNOME 3.28 stop
letting gsd calculate this number itself, when we already have it readily
calculated in mutter.
Comment 1 Jonas Ådahl 2017-10-11 10:09:44 UTC
Created attachment 361311 [details] [review]
settings: Get UI scaling factor from primary logical monitor

Don't use MAX(logical monitor scales) to determine the UI scaling
factor, just use the primary logical monitor. That's where the shell UI
will most likely be.
Comment 2 Jonas Ådahl 2017-10-11 10:09:50 UTC
Created attachment 361312 [details] [review]
DisplayConfig: Add 'legacy-ui-scaling-factor' property

We have this value in mutter; lets share it so that for example
gnome-settings-daemon doesn't have to calculate it itself.
Comment 3 Rui Matos 2017-10-12 09:35:22 UTC
Review of attachment 361312 [details] [review]:

yeah, this seems useful

::: src/backends/meta-monitor-manager.c
@@ +1449,3 @@
+  ui_scaling_factor = meta_settings_get_ui_scaling_factor (settings);
+  g_variant_builder_add (&properties_builder, "{sv}",
+                         "logacy-ui-scaling-factor",

typo: logacy
Comment 4 Rui Matos 2017-10-12 09:36:25 UTC
Review of attachment 361311 [details] [review]:

aha, right
Comment 5 Jonas Ådahl 2017-10-12 09:44:20 UTC
Attachment 361311 [details] pushed as eaf9ccd - settings: Get UI scaling factor from primary logical monitor
Attachment 361312 [details] pushed as fad5657 - DisplayConfig: Add 'legacy-ui-scaling-factor' property
Comment 6 Jonas Ådahl 2017-10-12 09:45:50 UTC
Backported the first patch to gnome-3-26.
Comment 7 Jonas Ådahl 2017-10-12 09:57:14 UTC
*** Bug 788040 has been marked as a duplicate of this bug. ***
Comment 8 Florian Müllner 2017-10-16 18:56:47 UTC
*** Bug 789072 has been marked as a duplicate of this bug. ***
Comment 9 Michael Rapp 2017-11-06 00:36:01 UTC
I still have issues with HIDPI scalling under Gnome 3.26.2 (see https://bugzilla.gnome.org/show_bug.cgi?id=788744). Is the fix for this issue already released?
Comment 10 Jiri Eischmann 2017-11-06 12:20:16 UTC
(In reply to Michael Rapp from comment #9)
> I still have issues with HIDPI scalling under Gnome 3.26.2 (see
> https://bugzilla.gnome.org/show_bug.cgi?id=788744). Is the fix for this
> issue already released?

It is fixed for me. Now it behaves like in GNOME 3.24. And already in 3.26.1 (Fedora 27).
Comment 11 Michael Rapp 2017-11-06 15:05:26 UTC
(In reply to Jiri Eischmann from comment #10)
> (In reply to Michael Rapp from comment #9)
> > I still have issues with HIDPI scalling under Gnome 3.26.2 (see
> > https://bugzilla.gnome.org/show_bug.cgi?id=788744). Is the fix for this
> > issue already released?
> 
> It is fixed for me. Now it behaves like in GNOME 3.24. And already in 3.26.1
> (Fedora 27).

If it is fixed for you, issue #788744 is probably not related to this one. As far as I understand, this issue deals with scaling of the shell UI whereas the other one is about the scaling of application windows. I thought that there might be a connection, but some applications are still scaled incorrectly on my system.